<resources>
    <string name="app_name">BoardPass</string>
    <string name="welcome">Welcome</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_FullName">Full Name</string>
    <string name="hint_BirthDate">Birth Date</string>
    <string name="hint_ID">ID Card</string>
    <string name="hint_VIPPref">VIP table preferences</string>
    <string name="hint_pic">Picture</string>
    <string name="hint_EventName">Event Name</string>
    <string name="hint_PlaceName">Place Name</string>
    <string name="hint_Date">Date</string>
    <string name="hint_Time">Time</string>
    <string name="hint_Price">Price</string>
    <string name="hint_Address">Address</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_events">EVENTS</string>
    <string name="btn_back">BACK</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="SignUp_lnk">Don\'t have an account?
        <b>Sign Up</b>
    </string>
    <string name="login_lnk">Already a member? Login</string>
    <string name="image">Thumbnail</string>
    <string name="title">Title</string>
    <string name="place">Place</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyC-ZlIKdpLNGfNdWib45Q7lmCvxophvrqo</string>
    <string name="hint_Currency">Price Currency</string>
    <string name="hint_PriceCurrencyDropdownn">Select Currency</string>
</resources>
