<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/gray"
        android:isScrollContainer="false"
        android:fitsSystemWindows="true"
        tools:context=".activities.admin.AddEventActivity">

    <!--  Event Name Label -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_EventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textColor="@color/white"
                android:maxLength="100"
                android:hint="@string/hint_EventName"/>
    </android.support.design.widget.TextInputLayout>

    <!--  Place Name Label -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_PlaceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textColor="@color/white"
                android:maxLength="50"
                android:hint="@string/hint_PlaceName"/>
    </android.support.design.widget.TextInputLayout>

    <!--  Date Label -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColor="@color/white"
                android:focusable="false"
                android:hint="@string/hint_Date"/>
    </android.support.design.widget.TextInputLayout>

    <!--  Time Label -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:textColor="@color/white"
                android:focusable="false"
                android:hint="@string/hint_Time"/>
    </android.support.design.widget.TextInputLayout>

    <!--  Address Label -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textColor="@color/white"
                android:hint="@string/hint_Address"/>
    </android.support.design.widget.TextInputLayout>

    <!--  Price Label -->
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/input_Price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:maxLength="10"
                android:hint="@string/hint_Price"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

        <!--  Event Picture Button -->
        <ImageButton
                android:id="@+id/btn_EventPic"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/pic"
                android:background="@null"
                android:contentDescription="@string/hint_pic"
                android:layout_gravity="left"/>

        <!--  Event Picture -->
        <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:layout_toRightOf="@id/btn_EventPic"
                android:layout_marginLeft="60dp"/>

        <!-- Back Button -->
        <ImageButton
                android:id="@+id/img_btn_back"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="24dp"
                android:background="@null"
                android:contentDescription="@string/btn_back"
                android:layout_below="@id/btn_EventPic"
                android:layout_toLeftOf="@id/imageView"
                android:src="@drawable/back" />

        <!-- Submit Button -->
        <ImageButton
                android:id="@+id/img_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="63dp"
                android:background="@null"
                android:contentDescription="@string/btn_submit"
                android:layout_below="@id/imageView"
                android:layout_toRightOf="@id/img_btn_back"
                android:src="@drawable/submit" />
    </RelativeLayout>
</LinearLayout>
